# py-demo

./: .env.example  .env.local  .gitignore  Makefile  README.md  miniblog.db  miniblog.py  pyproject.toml  requirements.txt  run.py  start.sh
app/: app.py
configs/: .env.example  nacos-config-examples.json
configs/tyk-config/apps/: api-definition.json  blog-service.json  user-service.json
configs/tyk-config/policies/: policies.json
docker/: Dockerfile  Dockerfile.blog  docker-compose.microservices.yml
docker/compose/: .env.development  .env.production  docker-compose.yml  start.sh
docs/: README-MICROSERVICES.md  api-path-mapping.md  deployment.md  microservices-architecture.md  nacos-config-guide.md  project-structure.md
helm/python-miniblog/: Chart.yaml  values.yaml
helm/python-miniblog/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  mysql.yaml  nacos.yaml  redis.yaml  service.yaml  tyk-api-definition.yaml  tyk.yaml
manifests/: README.md
manifests/helm/: README.md
manifests/helm/python-miniblog/: README.md  values-development.yaml  values-production.yaml  values-testing.yaml  values.yaml
manifests/helm/python-miniblog/templates/: configmap.yaml  deployment.yaml  ingress.yaml  mysql.yaml  service.yaml  serviceaccount.yaml  tyk-api-definition.yaml  tyk-policies.yaml  tyk.yaml
manifests/kubernetes/: blog-service.yaml  kustomization.yaml  mysql.yaml  namespace.yaml  redis.yaml  user-service.yaml
scripts/: deploy.sh  dev-start.sh  dev-stop.sh  helm-deploy.sh  manage_nacos_config.py  start-dev.sh  start_uv.sh  test-api-gateway.sh  test-api.sh  test-helm-deployment.sh
scripts/make-rules/: README.md  common.mk  dev.mk  docker.mk  help.mk  test.mk
services/api-gateway/: api_gateway.py  requirements.txt
services/api-gateway/app/: __init__.py  config.py  extensions.py
services/api-gateway/app/api/: __init__.py  auth.py  proxy.py
services/api-gateway/app/main/: routes.py
services/blog-service/: Dockerfile  blog_service.py  requirements.txt
services/blog-service/app/: __init__.py  config.py  extensions.py  models.py
services/blog-service/app/api/: __init__.py  categories.py  comments.py  errors.py  posts.py  tags.py
services/blog-service/app/main/: routes.py
services/blog-service/app/utils/: nacos_config.py
services/user-service/: Dockerfile  requirements.txt  user_service.py
services/user-service/app/: __init__.py  config.py  extensions.py  models.py
services/user-service/app/api/: __init__.py  auth.py  errors.py  (+1 more)
src/: __init__.py
src/blog_service/: README.md  main.py
src/blog_service/app/: __init__.py  middleware.py  models.py
src/shared/config/: base.py
src/shared/database/: base.py
src/shared/exceptions/: base.py
src/shared/middleware/: cors.py
src/shared/utils/: logger.py
src/user_service/: main.py
src/user_service/app/: config.py  extensions.py
tests/: test_app.py  test_nacos_config.py
(+43 files in other folders)
